--- a/.github/workflows/azure_openai.yml
+++ b/.github/workflows/azure_openai.yml
@@ -13,6 +13,9 @@ on:
           - plan
           - apply
           - destroy
+permissions:
+      id-token: write
+      contents: read
 
 jobs:
   terraform:
