--- a/.github/workflows/azure_openai.yml
+++ b/.github/workflows/azure_openai.yml
@@ -1,3 +1,4 @@
+
 name: Azure OpenAI Deployment
 
 on:
@@ -12,9 +13,7 @@ on:
           - plan
           - apply
           - destroy
-permissions:
-      id-token: write
-      contents: read
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
@@ -27,18 +26,12 @@ jobs:
         with:
           terraform_version: '1.4.0'
 
-      - name: Login to Azure
+      - name: Login to Azure using Service Principal
         uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Set Azure credentials
-        run: |
-          echo "ARM_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "ARM_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
 
       - name: Initialize Terraform
         run: terraform init
@@ -46,16 +39,15 @@ jobs:
 
       - name: Terraform Plan
         if: github.event.inputs.action == 'plan'
-        run: terraform plan -var "subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}" -out=tfplan
+        run: terraform plan -out=tfplan
         working-directory: terraform
 
       - name: Terraform Apply
         if: github.event.inputs.action == 'apply'
-        run: terraform apply -auto-approve -var "subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}"
+        run: terraform apply -auto-approve
         working-directory: terraform
 
       - name: Terraform Destroy
         if: github.event.inputs.action == 'destroy'
-        run: terraform destroy -auto-approve -var "subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}"
+        run: terraform destroy -auto-approve
         working-directory: terraform
-
