--- a/.github/workflows/azure_openai.yml
+++ b/.github/workflows/azure_openai.yml
@@ -32,6 +32,13 @@ jobs:
         with:
           terraform_version: '1.4.0'
 
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+         client-id: ${{ secrets.AZURE_CLIENT_ID }}
+         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+         
       - name: Initialize Terraform
         run: terraform init
         working-directory: terraform
