--- a/.github/workflows/azure_openai.yml
+++ b/.github/workflows/azure_openai.yml
@@ -24,7 +24,7 @@ jobs:
       ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       ARM_USE_OIDC: true
-      TF_LOG: DEBUG
+      # TF_LOG: DEBUG
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
