--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -21,3 +21,8 @@ jobs:
          client-id: ${{ secrets.AZURE_CLIENT_ID }}
          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Capture Workflow Failure Logs
+        run: |
+          echo "🚨 aicicd job failed. Capturing logs..."
+          cat $GITHUB_WORKSPACE/_logs || echo "No additional logs found."
