--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -27,24 +27,13 @@ jobs:
     needs: [aicicd]
     runs-on: ubuntu-latest
     steps:
-      - name: Capture Job Logs
+      - name: Fetch AICICD Logs
         run: |
           mkdir -p logs
-          
-          # Capture the job status
-          echo "======== Job Status ========" > logs/aicicd_output.log
-          echo "Job Status: ${{ needs.aicicd.result }}" >> logs/aicicd_output.log
-          
-          # Capture GitHub Actions logs
-          echo "======== Workflow Logs ========" >> logs/aicicd_output.log
-          cat /home/runner/work/_temp/_github_workflow/* >> logs/aicicd_output.log 2>/dev/null || echo "No logs found" >> logs/aicicd_output.log
-          
-          # Capture Terraform-related logs (if available)
-          echo "======== Terraform Logs ========" >> logs/aicicd_output.log
-          journalctl --no-pager --since "10 minutes ago" | grep -i terraform >> logs/aicicd_output.log || echo "No Terraform logs found" >> logs/aicicd_output.log
-          
-      - name: Upload Logs
-        uses: actions/upload-artifact@v4
-        with:
-          name: aicicd-logs
-          path: logs/aicicd_output.log
+          gh run view ${{ github.run_id }} --log > logs/aicicd_error_log.txt || echo "Error log capture failed."
+
+      - name: Print Logs Before Uploading
+        run: |
+          echo "========== START OF AICICD ERROR LOG =========="
+          cat logs/aicicd_error_log.txt || echo "Error log is empty."
+          echo "=========== END OF AICICD ERROR LOG ==========="
