--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -27,19 +27,19 @@ jobs:
     needs: [aicicd]
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch and Save Job Logs
+      - name: Fetch Workflow Run ID
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir -p logs
           echo "Fetching logs for aicicd job..."
 
-          # Get the workflow run ID
+          # Get the latest workflow run ID
           RUN_ID=$(curl -s -H "Authorization: token $GH_TOKEN" \
-            "https://api.github.com/repos/${{ github.repository }}/actions/runs?event=push&status=completed" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/runs?status=completed&per_page=1" \
             | jq -r '.workflow_runs[0].id')
 
-          echo "Workflow Run ID: $RUN_ID" > logs/aicicd_runtime.log
+          echo "Workflow Run ID: $RUN_ID" | tee logs/workflow_run_id.txt
 
           # Validate that RUN_ID is fetched
           if [[ -z "$RUN_ID" || "$RUN_ID" == "null" ]]; then
@@ -47,15 +47,21 @@ jobs:
             exit 1
           fi
 
-          # Download logs from GitHub API
+      - name: Download Workflow Logs
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           LOGS_URL="https://api.github.com/repos/${{ github.repository }}/actions/runs/$RUN_ID/logs"
-          
-          curl -s -L -H "Authorization: token $GH_TOKEN" \
-            -o logs/aicicd_logs.zip "$LOGS_URL"
 
-          # Validate that logs are downloaded
-          if [[ ! -s logs/aicicd_logs.zip ]]; then
-            echo "Failed to download logs from $LOGS_URL" | tee logs/error.log
+          echo "Downloading logs from $LOGS_URL..."
+          curl -s -L -H "Authorization: token $GH_TOKEN" -o logs/aicicd_logs.zip "$LOGS_URL"
+
+          # Validate if the downloaded file is a valid ZIP archive
+          if file logs/aicicd_logs.zip | grep -q "Zip archive data"; then
+            echo "Log file is a valid ZIP archive."
+          else
+            echo "Error: Invalid log file downloaded. Check API response." | tee logs/error.log
+            mv logs/aicicd_logs.zip logs/aicicd_logs_invalid_response.html
             exit 1
           fi
 
