--- a/.github/workflows/azure_openai.yml
+++ b/.github/workflows/azure_openai.yml
@@ -78,13 +78,15 @@ jobs:
           -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}"
         working-directory: terraform
 
-      - name: Save Terraform Output
+      - name: Capture Output of Uses
         run: |
-          echo "Terraform Output:" > $GITHUB_WORKSPACE/terraform_output.log
-          cat terraform/terraform_output.log >> $GITHUB_WORKSPACE/terraform_output.log
+          echo "Capturing the output of aicicd job..."
+          gh run view --log > output.log
+        env:
+          GH_TOKEN: ${{ secrets.PDE_GHEC_PAT_SECRET }}
 
-      - name: Upload Terraform Output Artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload Logs
+        uses: actions/upload-artifact@v3
         with:
-          name: terraform-output
-          path: $GITHUB_WORKSPACE/terraform_output.log
+          name: aicicd-output
+          path: output.log
