--- a/.github/workflows/azure_openai.yml
+++ b/.github/workflows/azure_openai.yml
@@ -78,13 +78,5 @@ jobs:
           -var "tenant_id=${{ secrets.AZURE_TENANT_ID }}"
         working-directory: terraform
 
-      - name: Save Terraform Output
-        run: |
-          echo "Terraform Output:" > $GITHUB_WORKSPACE/terraform_output.log
-          cat terraform/terraform_output.log >> $GITHUB_WORKSPACE/terraform_output.log
-
-      - name: Upload Terraform Output Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: terraform-output
-          path: $GITHUB_WORKSPACE/terraform_output.log
+      - name: Print output
+        run: echo "Reusable workflow output: ${{ needs.plan.outputs.result }}"
