--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -21,6 +21,7 @@ permissions:
 jobs:
   terraform_plan:
     name: Terraform Plan
+    id: plan
     uses: ./.github/workflows/terraform-reusable.yml
     with:
       action: plan
@@ -33,6 +34,7 @@ jobs:
 
   terraform_apply:
     name: Terraform Apply
+    id: apply
     uses: ./.github/workflows/terraform-reusable.yml
     with:
       action: apply
@@ -45,6 +47,7 @@ jobs:
 
   terraform_destroy:
     name: Terraform Destroy
+    id: destroy
     uses: ./.github/workflows/terraform-reusable.yml
     with:
       action: destroy
