--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -57,3 +57,28 @@ jobs:
       AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
     if: github.event.inputs.action == 'destroy'
+
+  capture_job_id:
+    name: Capture aicicd Job ID on Failure
+    runs-on: ubuntu-latest
+    needs: [aicicd]
+    if: failure() # Runs only if aicicd fails
+    steps:
+      - name: Get Workflow Run Jobs
+        run: |
+          JOBS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | select(.name=="aicicd-poc") | .id')
+          echo "AICICD_JOB_ID=$JOBS" >> $GITHUB_ENV
+          echo "Captured Job ID: $JOBS"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Use PAT with workflow permissions
+
+      - name: Debug Job ID
+        run: |
+          echo "Job ID retrieved: $AICICD_JOB_ID"
+
+      - name: Fetch aicicd Logs
+        run: |
+          echo "Fetching logs for Job ID: $AICICD_JOB_ID"
+          gh api repos/${{ github.repository }}/actions/jobs/$AICICD_JOB_ID/logs
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
