--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -58,7 +58,7 @@ jobs:
   capture_job_id:
     name: Capture aicicd Job ID on Failure
     runs-on: ubuntu-latest
-    needs: [aicicd]
+    needs: [terraform_plan, terraform_apply, terraform_destroy]
     if: failure() # Runs only if aicicd fails
     steps:
       - name: Get Workflow Run Jobs
