--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -56,28 +56,28 @@ jobs:
     if: github.event.inputs.action == 'destroy'
 
   capture_job_id:
-    name: Capture aicicd Job ID on Failure
+    name: Capture Job IDs and Fetch Logs
     runs-on: ubuntu-latest
-    needs: [terraform_plan, terraform_apply, terraform_destroy]
-    if: always() # Runs only if aicicd fails
+    needs: [terraform_plan, terraform_apply, terraform_destroy]  # Runs after all jobs
+    if: always()  # Ensures execution even if previous jobs fail
     steps:
       - name: Get Workflow Run Jobs
         run: |
-          JOBS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | .id')
-          echo "JOB_IDS=$JOBS" >> $GITHUB_ENV
-          echo "Captured Job IDs: $JOBS"
+          JOBS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | .id' | tr '\n' ' ')
+          echo "JOB_IDS=${JOBS}" >> $GITHUB_ENV
+          echo "Captured Job IDs: ${JOBS}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Debug Job ID
+      - name: Debug Job IDs
         run: |
-          echo "Job IDs retrieved: $JOB_IDS"
+          echo "Job IDs retrieved: ${JOB_IDS}"
 
       - name: Fetch Logs for All Jobs
         run: |
-          for JOB_ID in $JOB_IDS; do
-            echo "Fetching logs for Job ID: $JOB_ID"
-            gh api repos/${{ github.repository }}/actions/jobs/$JOB_ID/logs
+          for JOB_ID in ${JOB_IDS}; do
+            echo "Fetching logs for Job ID: ${JOB_ID}"
+            gh api repos/${{ github.repository }}/actions/jobs/${JOB_ID}/logs
           done
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
