--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -56,28 +56,37 @@ jobs:
     if: github.event.inputs.action == 'destroy'
 
   capture_job_id:
-    name: Capture Job IDs and Fetch Logs
+    name: Capture Job Names and IDs, Fetch Logs
     runs-on: ubuntu-latest
     needs: [terraform_plan, terraform_apply, terraform_destroy]  # Runs after all jobs
-    if: always()  # Ensures execution even if previous jobs fail
+    if: failure()  # Ensures execution even if previous jobs fail
     steps:
-      - name: Get Workflow Run Jobs
+      - name: Get Workflow Run Jobs (Names and IDs)
         run: |
-          JOBS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | .id' | tr '\n' ' ')
-          echo "JOB_IDS=${JOBS}" >> $GITHUB_ENV
-          echo "Captured Job IDs: ${JOBS}"
+          JOB_DETAILS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | "\(.id) \(.name)"')
+          
+          echo "JOB_DETAILS<<EOF" >> $GITHUB_ENV
+          echo "$JOB_DETAILS" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+          echo "Captured Job Details:"
+          echo "$JOB_DETAILS"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Debug Job IDs
+      - name: Debug Job Details
         run: |
-          echo "Job IDs retrieved: ${JOB_IDS}"
+          echo "Job Details Retrieved:"
+          echo "$JOB_DETAILS"
 
       - name: Fetch Logs for All Jobs
         run: |
-          for JOB_ID in ${JOB_IDS}; do
-            echo "Fetching logs for Job ID: ${JOB_ID}"
+          while IFS= read -r line; do
+            JOB_ID=$(echo $line | awk '{print $1}')
+            JOB_NAME=$(echo $line | awk '{print substr($0, index($0,$2))}')
+            echo "Fetching logs for Job ID: $JOB_ID, Job Name: $JOB_NAME"
             gh api repos/${{ github.repository }}/actions/jobs/${JOB_ID}/logs
-          done
+          done <<< "$JOB_DETAILS"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
