--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -55,38 +55,49 @@ jobs:
       AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
     if: github.event.inputs.action == 'destroy'
 
-  capture_job_id:
-    name: Capture Job Names and IDs, Fetch Logs
+  capture_job_errors:
+    name: Capture Job Errors and Fetch Logs
     runs-on: ubuntu-latest
     needs: [terraform_plan, terraform_apply, terraform_destroy]  # Runs after all jobs
-    if: failure()  # Ensures execution even if previous jobs fail
+    if: always()  # Ensures execution even if previous jobs fail
     steps:
-      - name: Get Workflow Run Jobs (Names and IDs)
+      - name: Get Workflow Run Jobs (Failed Only)
         run: |
-          JOB_DETAILS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | "\(.id) \(.name)"')
+          FAILED_JOBS=$(gh api repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs --jq '.jobs[] | select(.conclusion=="failure") | "\(.id) \(.name)"')
           
-          echo "JOB_DETAILS<<EOF" >> $GITHUB_ENV
-          echo "$JOB_DETAILS" >> $GITHUB_ENV
+          echo "FAILED_JOBS<<EOF" >> $GITHUB_ENV
+          echo "$FAILED_JOBS" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-          echo "Captured Job Details:"
-          echo "$JOB_DETAILS"
+          echo "Captured Failed Job Details:"
+          echo "$FAILED_JOBS"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Debug Job Details
+      - name: Debug Failed Job Details
         run: |
-          echo "Job Details Retrieved:"
-          echo "$JOB_DETAILS"
+          echo "Failed Jobs Retrieved:"
+          echo "$FAILED_JOBS"
 
-      - name: Fetch Logs for All Jobs
+      - name: Fetch and Extract Errors from Logs
         run: |
+          echo "Extracting errors from failed job logs..." > errors.log
+          
           while IFS= read -r line; do
             JOB_ID=$(echo $line | awk '{print $1}')
             JOB_NAME=$(echo $line | awk '{print substr($0, index($0,$2))}')
+            
             echo "Fetching logs for Job ID: $JOB_ID, Job Name: $JOB_NAME"
-            gh api repos/${{ github.repository }}/actions/jobs/${JOB_ID}/logs
-          done <<< "$JOB_DETAILS"
+            
+            gh api repos/${{ github.repository }}/actions/jobs/${JOB_ID}/logs > job_${JOB_ID}.log
+            
+            # Extract only error messages from the log file
+            grep -i "error" job_${JOB_ID}.log >> errors.log || echo "No errors found for $JOB_NAME"
+
+          done <<< "$FAILED_JOBS"
+
+          echo "Extracted Errors:"
+          cat errors.log
+          
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
